config circle ci

--- a/config.yml
+++ b/config.yml
@@ -27,6 +27,6 @@ jobs:
           paths:
             - ~/.npm
             - ~/.cache
-      - run: $(npm bin)/cypress run 
+      - run: $(npm bin)/cypress run  --record 
 
 
