--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,11 @@
 language: node_js
 node_js:
-  - 8
+  - 10
 cache:
   directories:
-    - node_modules
-
-before_script:
-  - yarn build
-  - yarn start --silent &
-  
+    - ~/.npm
+    - ~/.cache
+install:
+  - npm ci
 script:
-  # run unit tests:
-  - yarn tests
-  # run E2E tests:
   - $(npm bin)/cypress run --record
