--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ cache:
 install:
   - npm ci
 script:
-  - $(npm bin)/cypress run --record --key 30ea5392-97ae-4cc4-97d8-7e661cbe004d
+  - $npx cypress run --record --key 30ea5392-97ae-4cc4-97d8-7e661cbe004d
